--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
