add new page forgot password page:   can send email for change Password new Password page:   can change Password now both page not redirect to any page or effect after submit

--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,8 @@ TRANSFER_TOKEN_SALT=/+oT7+sE24BGjMBs0QbJqg==
 DATABASE_CLIENT=sqlite
 DATABASE_FILENAME=.tmp/data.db
 JWT_SECRET=+GyAXDUnaTEBGmtCPwCV7Q==
+#mail plugin
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USERNAME=forallt48@gmail.com
+SMTP_PASSWORD=bdgd fbqu jmee xjts
