--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "moment": "^2.30.1",
+    "promptpay-qr": "^0.5.0",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
