--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
     "react-use": "^17.5.0",
     "web-vitals": "^2.1.4"
   },
